<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <POU Name="fbData" Id="{248a6ed4-6800-4434-941e-a6f42535b2e3}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK fbData
VAR
	PlcData : stData;
	
	{attribute clr [ReadOnly()]}
	{attribute clr [CompilerOmits("BuilderPlainer")]}
	{attribute clr [RenderIgnore()]}
	_logStart : ULINT;
	{attribute clr [RenderIgnore()]}
	{attribute clr [CompilerOmits("BuilderPlainer")]}
	_logDone : ULINT;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[PlcData.CycleCount := TwinCAT_SystemInfoVarList._TaskInfo[1].CycleCount;
PlcData.CycleTime := TwinCAT_SystemInfoVarList._TaskInfo[1].CycleTime;
PlcData.LastExecTime := TwinCAT_SystemInfoVarList._TaskInfo[1].LastExecTime;
IF(PlcData.Maximum < PlcData.LastExecTime) THEN PlcData.Maximum := PlcData.LastExecTime; END_IF;
IF(PlcData.Minimum > PlcData.LastExecTime) THEN PlcData.Minimum := PlcData.LastExecTime; END_IF;

//PlcData.DateTime := UINT_TO_DATE(TwinCAT_SystemInfoVarList._TaskInfo[1].LastExecTime);


IF(_logStart <= _logDone) THEN 
	_logStart := _logStart + 1;	
END_IF


]]></ST>
    </Implementation>
    <LineIds Name="fbData">
      <LineId Id="53" Count="2" />
      <LineId Id="57" Count="2" />
      <LineId Id="67" Count="0" />
      <LineId Id="65" Count="1" />
      <LineId Id="60" Count="1" />
      <LineId Id="9" Count="0" />
      <LineId Id="63" Count="1" />
      <LineId Id="62" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>